--- a/materializecssform/templates/materializecssform/field.html
+++ b/materializecssform/templates/materializecssform/field.html
@@ -69,14 +69,20 @@
     </div>
     {% elif field|is_select %}
     <div class="input-field col {{ classes.label }} {{ classes.value }} {{ classes.single_value }}">
-            {% if field|is_select_multiple %}
-                {% if classes.icon %}
-                    <i class="material-icons prefix">{{ classes.icon }}</i>
-                {% endif %}
+        {% if field|is_select_multiple %}
+            {% if classes.icon %}
+                <i class="material-icons prefix">{{ classes.icon }}</i>
+            {% endif %}
                 <select multiple name="{{ field.name }}">
-                    {% for choice in field %}
-                          {{ choice.tag }}
-                    {% endfor %}
+                    {% if field|is_iterable %}
+                        {% for choice in field %}
+                              {{ choice.tag }}
+                        {% endfor %}
+                    {% else %}
+                        {% for choice in field.all %}
+                              {{ choice.tag }}
+                        {% endfor %}
+                    {% endif %}
                 </select>
                 {% if field.auto_id %}
                     <label class="control-label {{ classes.label }} {% if field.field.required %}{{ form.required_css_class }}{% endif %}">{{ field.label }}</label>
@@ -85,38 +91,36 @@
                 {% for error in field.errors %}
                     <span class="help-block {{ form.error_css_class }}">{{ error }}</span>
                 {% endfor %}
-
-                {% if field.help_text %}
-                <p class="help-block">
-                    {{ field.help_text|safe }}
-                </p>
+            </select>
+        {% else %}
+            {% if classes.icon %}
+                <i class="material-icons prefix">{{ classes.icon }}</i>
                 {% endif %}
-
-            {% else %}
-                {% if classes.icon %}
-                    <i class="material-icons prefix">{{ classes.icon }}</i>
-                {% endif %}
-                <select name="{{ field.name }}">
+            <select name="{{ field.name }}">
+                {% if field|is_iterable %}
                     {% for choice in field %}
-                          {{ choice.tag }}
+                            {{ choice.tag }}
                     {% endfor %}
-                </select>
-                {% if field.auto_id %}
-                <label class="control-label {{ classes.label }} {% if field.field.required %}{{ form.required_css_class }}{% endif %}">{{ field.label }}</label>
+                {% else %}
+                    {% for choice in field.all %}
+                        {{ choice.tag }}
+                    {% endfor %}
                 {% endif %}
+            </select>
+        {% endif %}
+        {% if field.auto_id %}
+            <label class="control-label {{ classes.label }} {% if field.field.required %}{{ form.required_css_class }}{% endif %}">{{ field.label }}</label>
+        {% endif %}
 
-                {% for error in field.errors %}
-                    <span class="help-block {{ form.error_css_class }}">{{ error }}</span>
-                {% endfor %}
+        {% for error in field.errors %}
+            <span class="help-block {{ form.error_css_class }}">{{ error }}</span>
+        {% endfor %}
 
-                {% if field.help_text %}
-                <p class="help-block">
-                    {{ field.help_text|safe }}
-                </p>
-                {% endif %}
-
-            {% endif %}
-
+        {% if field.help_text %}
+            <p class="help-block">
+                {{ field.help_text|safe }}
+            </p>
+        {% endif %}
     </div>
 
     {% elif field|is_multiple_checkbox %}
