--- a/materializecssform/templates/materializecssform/field.html
+++ b/materializecssform/templates/materializecssform/field.html
@@ -73,7 +73,7 @@
             {% if classes.icon %}
                 <i class="material-icons prefix">{{ classes.icon }}</i>
             {% endif %}
-                <select multiple name="{{ field.name }}">
+                <select multiple name="{{ field.name }}" {% include 'materializecssform/attrs.html' %}>
                     {% if field|is_iterable %}
                         {% for choice in field %}
                               {{ choice.tag }}
@@ -130,18 +130,14 @@
         {% endif %}
         <div id="{{field.auto_id}}">
             <ul>
-
                 {% for choice in field %}
-
                     <li class="{% if field.field.required and form.required_css_class %}{{ form.required_css_class }}{% endif %}">
                         <label>
                             {{ choice.tag }}
                             <span>{{ choice.choice_label }}</span>
                         </label>
                     </li>
-
                 {% endfor %}
-
             </ul>
             {% for error in field.errors %}
                 <span class="help-block {{ form.error_css_class }}">{{ error }}</span>
