--- a/selecmat/templates/selecmat/form.html
+++ b/selecmat/templates/selecmat/form.html
@@ -11,6 +11,6 @@
 {% endfor %}
 
 {% for field in form.visible_fields %}
-    {% include 'materializecssform/field.html' %}
+    {% include 'selecmat/field.html' %}
 {% endfor %}
 
