--- a/selecmat/templates/selecmat/formset.html
+++ b/selecmat/templates/selecmat/formset.html
@@ -2,6 +2,6 @@
 
 {% for form in formset %}
 
-  {% include "materializecssform/form.html" with form=form %}
+  {% include "selecmat/form.html" with form=form %}
 
 {% endfor %}
