--- a/selecmat/templates/selecmat/field.html
+++ b/selecmat/templates/selecmat/field.html
@@ -73,7 +73,11 @@
                 <i class="material-icons prefix">{{ classes.icon }}</i>
             {% endif %}
             
-            <select multiple name="{{ field.name }}" {% include 'selecmat/attrs.html' %} placholder="{{ field.label }}">
+            {% if field.auto_id %}
+                <label for="{{ field.auto_id }}" class="control-label {{ classes.label }} {% if field.field.required %}{{ form.required_css_class }}{% endif %}">{{ field.label }}</label>
+            {% endif %}
+            
+            <select id="{{ field.auto_id }}" name="{{ field.name }}" {% include 'selecmat/attrs.html' %} placholder="{{ field.label }}">
                 {% if field|is_iterable %}
                     {% for choice in field %}
                           {{ choice.tag }}
