--- a/selecmat/templates/selecmat/field.html
+++ b/selecmat/templates/selecmat/field.html
@@ -74,10 +74,10 @@
             {% endif %}
             
             {% if field.auto_id %}
-                <label for="{{ field.auto_id }}" class="control-label {{ classes.label }} {% if field.field.required %}{{ form.required_css_class }}{% endif %}">{{ field.label }}</label>
+                <label class="control-label {{ classes.label }} {% if field.field.required %}{{ form.required_css_class }}{% endif %}">{{ field.label }}</label>
             {% endif %}
             
-            <select id="{{ field.auto_id }}" name="{{ field.name }}" {% include 'selecmat/attrs.html' %} placholder="{{ field.label }}">
+            <select id="{{ field.auto_id }}" {% if field|is_select_multiple %}multiple{% endif %} name="{{ field.name }}" {% include 'selecmat/attrs.html' %} placholder="{{ field.label }}">
                 {% if field|is_iterable %}
                     {% for choice in field %}
                           {{ choice.tag }}
