--- a/selecmat/templates/selecmat/field.html
+++ b/selecmat/templates/selecmat/field.html
@@ -68,7 +68,7 @@
 
         </div>
     {% elif field|is_select %}
-        <div class="input-field col {{ classes.label }} {{ classes.value }} {{ classes.single_value }}">
+        <div class="col {{ classes.label }} {{ classes.value }} {{ classes.single_value }}">
             {% if classes.icon %}
                 <i class="material-icons prefix">{{ classes.icon }}</i>
             {% endif %}
@@ -86,7 +86,7 @@
             </select>
             
             {% if field.auto_id %}
-                <label class="control-label {{ classes.label }} {% if field.field.required %}{{ form.required_css_class }}{% endif %}">{{ field.label }}</label>
+                <label for="{{ field.auto_id }}" class="control-label {{ classes.label }} {% if field.field.required %}{{ form.required_css_class }}{% endif %}">{{ field.label }}</label>
             {% endif %}
 
             {% for error in field.errors %}
