--- a/selecmat/templates/selecmat/field.html
+++ b/selecmat/templates/selecmat/field.html
@@ -68,7 +68,7 @@
 
         </div>
     {% elif field|is_select %}
-        <div class="col {{ classes.label }} {{ classes.value }} {{ classes.single_value }}">
+        <div class="input-field col {{ classes.label }} {{ classes.value }} {{ classes.single_value }}">
             
             {% if field.auto_id %}
                 <label style="position:inherit;" for="{{ field.auto_id }}" class="control-label {{ classes.label }} {% if field.field.required %}{{ form.required_css_class }}{% endif %}">{{ field.label }}</label>
@@ -102,7 +102,7 @@
         </div>
 
     {% elif field|is_multiple_checkbox %}
-        <div class="col {{ classes.label }} {{ classes.value }} {{ classes.single_value }}">
+        <div class="input-field col {{ classes.label }} {{ classes.value }} {{ classes.single_value }}">
             {% if field.auto_id %}
                 <label>{{ field.label }}</label>
             {% endif %}
