--- a/selecmat/templates/selecmat/field.html
+++ b/selecmat/templates/selecmat/field.html
@@ -71,7 +71,7 @@
         <div class="input-field col {{ classes.label }} {{ classes.value }} {{ classes.single_value }}">
             
             {% if field.auto_id %}
-                <label style="position:inherit;" for="{{ field.auto_id }}" class="control-label {{ classes.label }} {% if field.field.required %}{{ form.required_css_class }}{% endif %}">{{ field.label }}</label>
+                <label style="position:inherit; left:0; margin-bottom:10px;" for="{{ field.auto_id }}" class="control-label {{ classes.label }} {% if field.field.required %}{{ form.required_css_class }}{% endif %}">{{ field.label }}</label>
             {% endif %}
             
             {% if classes.icon %}
