--- a/selecmat/templates/selecmat/field.html
+++ b/selecmat/templates/selecmat/field.html
@@ -53,7 +53,7 @@
                 <i class="material-icons prefix">{{ classes.icon }}</i>
             {% endif %}
 
-            <input type="date" id="{{ field.auto_id }}" name="{{ field.html_name }}" class="datepicker" value="{% if field.value %}{{ field.value|date:'Y-m-d' }}{% endif %}" {% include 'selecmat/attrs.html' %} >
+            <input type="text" id="{{ field.auto_id }}" name="{{ field.html_name }}" class="datepicker" value="{% if field.value %}{{ field.value|date:'Y-m-d' }}{% endif %}" {% include 'selecmat/attrs.html' %} >
             <label for="{{ field.id_for_label }}">{{ field.label }}</label>
 
             {% for error in field.errors %}
@@ -98,7 +98,7 @@
                 <i class="material-icons prefix">{{ classes.icon }}</i>
             {% endif %}
             
-            <select id="{{ field.auto_id }}" {% if field|is_select_multiple %}multiple{% endif %} name="{{ field.name }}" {% include 'selecmat/attrs.html' %} placholder="{{ field.label }}">
+            <select id="{{ field.auto_id }}" {% if field|is_select_multiple %}multiple{% endif %} name="{{ field.html_name }}" {% include 'selecmat/attrs.html' %} placholder="{{ field.label }}">
                 {% if field|is_iterable %}
                     {% for choice in field %}
                           {{ choice.tag }}
