--- a/selecmat/templates/selecmat/field.html
+++ b/selecmat/templates/selecmat/field.html
@@ -53,7 +53,7 @@
                 <i class="material-icons prefix">{{ classes.icon }}</i>
             {% endif %}
 
-            <input type="text" id="{{ field.auto_id }}" name="{{ field.html_name }}" class="datepicker" value="{% if field.value %}{{ field.value|date:'Y-m-d' }}{% endif %}" {% include 'selecmat/attrs.html' %} >
+            <input type="text" id="{{ field.auto_id }}" name="{{ field.html_name }}" class="datepicker" value="{% if field.value %}{% if field.value|is_date %}{{ field.value|date:'Y-m-d' }}{% else %}{{ field.value }}{% endif %}{% endif %}" {% include 'selecmat/attrs.html' %} >
             <label for="{{ field.id_for_label }}">{{ field.label }}</label>
 
             {% for error in field.errors %}
