--- a/selecmat/templates/selecmat/field.html
+++ b/selecmat/templates/selecmat/field.html
@@ -1,4 +1,4 @@
-{% load selecmat_tags %}
+{% load selecmat %}
 {% if field|is_checkbox %}
     <div class="col {{ classes.label }} {{ classes.value }} {{ classes.single_value }}">
         <div class="{% if field.field.required and form.required_css_class %}{{ form.required_css_class }}{% endif %}">
